# zbarlight

./: .drone.yml  .gitignore  .readthedocs.yaml  .travis.yml  ChangeLog.rst  Changelog.rst  LICENSE  MANIFEST.in  Makefile  README.rst  RELEASE.txt  pyproject.toml  requirements-dev.txt  run.py  setup.cfg  setup.py  test.py  tox.ini  zbarlight.c
.github/workflows/: ci.yaml  publish-on-pypi.yaml
docs/: conf.py  index.rst  reference.rst
src/zbarlight/: __init__.py  _zbarlight.c  _zbarlight.pyi  compat.py
tests/: test_code_scanner.py  test_docs.py  test_qr_code_scanner.py  test_scan_codes.py
zbarlight/: __init__.py  _zbarlight.c
