[project]
name = "zbarlight"
version = "4.1.dev0"
requires-python = ">= 3.10"
dependencies = [
  "Pillow",
]
authors = [
  { name = "Polyconseil", email = "opensource+zbarlight@polyconseil.fr" },
]
readme = "README.rst"
description = "A simple zbar wrapper"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["zbar", "QR code reader"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: C",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Homepage = "https://github.com/Polyconseil/zbarlight"
Documentation = "https://zbarlight.readthedocs.io"
Repository = "https://github.com/Polyconseil/zbarlight"
Issues = "https://github.com/Polyconseil/zbarlight"
Changelog = "https://github.com/Polyconseil/zbarlight/blob/master/Changelog.rst"


[tool.isort]
force_single_line = true
line_length = 120
multi_line_output = 3 # vertical hanging indent
known_first_party = "zbarlight"


[tool.mypy]
show_error_codes = true
strict = true
strict_equality_for_none = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
# Don't force us to type test functions, it's boring and useless.
disallow_untyped_defs = false


[tool.pylint.MASTER]
load-plugins = []

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint."MESSAGES CONTROL"]
enable = [
    "use-symbolic-message-instead",
    "useless-suppression",
]

disable = [
    "attribute-defined-outside-init",
    "consider-using-f-string",
    "cyclic-import",
    "duplicate-code",
    "fixme",
    "file-ignored",
    "import-outside-toplevel",
    "invalid-name",
    "locally-disabled",
    "missing-docstring",
    "no-member",
    "protected-access",
    "too-few-public-methods",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-public-methods",
    "too-many-statements",
    "ungrouped-imports",
    "unnecessary-lambda-assignment",
    "unused-argument",
    "wrong-import-order",
]


[[tool.setuptools.ext-modules]]
name = "zbarlight._zbarlight"
sources = ["src/zbarlight/_zbarlight.c"]
extra-compile-args = ["-std=c99"]
libraries= ["zbar"]


[tool.zest-releaser]
# Do not let zest.releaser upload to PyPI. It's done by a GitHub CI job.
upload-pypi = false
