[metadata]
name = zbarlight
version = 2.3
author = Polyconseil
author_email = opensource+zbarlight@polyconseil.fr
url = https://github.com/Polyconseil/zbarlight
description = A simple zbar wrapper
long_description = file: README.rst
license = BSD 3-Clause License
keywords = zbar, QR code reader
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Image Recognition

[options]
zip_safe = False
include_package_data = True
packages = find:
setup_requires =
    setuptools
install_requires =
    Pillow

[options.packages.find]
where = src

[flake8]
max-line-length = 120
exclude = build,dist,venv
max-complexity = 10
ignore = B404,C815,D10,W503
# B404: Import subprocess
# C815: Missing trailing comma in Python 3.5+
# D10x: Missing docstrings
# W503: Line break before binary operator (we use W504: Line break after binary operator)

[isort]
force_single_line = 1
line_length = 120
multi_line_output = 3
known_first_party = zbarlight

[zest.releaser]
create-wheel = no

[distutils]
index-servers = pypi
