[metadata]
name = zbarlight
version = 4.0.dev0
author = Polyconseil
author_email = opensource+zbarlight@polyconseil.fr
url = https://github.com/Polyconseil/zbarlight
description = A simple zbar wrapper
long_description = file: README.rst
license = BSD 3-Clause License
keywords = zbar, QR code reader
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Scientific/Engineering :: Image Recognition

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3
setup_requires =
    setuptools
install_requires =
    Pillow

[options.packages.find]
where = src

[flake8]
max-line-length = 120
exclude = build,dist,venv
max-complexity = 10
ignore = B404,C815,D10,W503
# B404: Import subprocess
# C815: Missing trailing comma in Python 3.5+
# D10x: Missing docstrings
# W503: Line break before binary operator (we use W504: Line break after binary operator)
per-file-ignores =
    tests/*:S101
# S101: Use of assert detected. The enclosed code will be removed when compiling to optimised byte code.

[isort]
force_single_line = 1
line_length = 120
multi_line_output = 3
known_first_party = zbarlight

[zest.releaser]
create-wheel = no

[distutils]
index-servers = pypi
