[metadata]
name = zbarlight
version = 4.0.dev0
author = Polyconseil
author_email = opensource+zbarlight@polyconseil.fr
url = https://github.com/Polyconseil/zbarlight
description = A simple zbar wrapper
long_description = file: README.rst
license = BSD 3-Clause License
keywords = zbar, QR code reader
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Scientific/Engineering :: Image Recognition

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3
install_requires =
    Pillow

[options.packages.find]
where = src

[isort]
force_single_line = 1
line_length = 120
multi_line_output = 3
known_first_party = zbarlight

[zest.releaser]
create-wheel = no

[distutils]
index-servers = pypi
